--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    background-color: #f5f5f5;
 }
 
 .dice{
@@ -18,3 +19,58 @@ body {
     padding-top: 12px;
     text-align: center;
 }
+.container{
+    margin: 0 auto;
+    width: 1200px;
+}
+header{
+    height: 100px;
+    background-color: darkgoldenrod;
+}
+header h1{
+    font-size: 2.6em;
+    padding-top: 20px;
+    margin: 0;
+}
+main{
+    padding-top: 80px;
+    border-radius: 30px;
+    background-color: darkgoldenrod;
+    display: flex;
+    border: 1 px solid black;
+}
+main{
+    display: flex;
+    justify-content: space-between;
+}
+aside{
+    border-left: 1 px solid black;
+    margin: 15px;
+    display: flex;
+}
+.timer{
+    border-bottom: 1 px solid black;
+}
+.time{
+    font-size: 2em;
+}
+.btn{
+    background-color: cornsilk;
+    box-shadow: 0 0 5px black;
+        box-shadow: 0 0 5px black;
+
+    border-radius: 5px;
+    font-size: 2em;
+    padding : 10px
+}
+.resume{
+    display: none;
+}
+.playtimer{
+    display: none;
+}
+.resetTimer{
+    display: none;
+}
+
+
