cgangement couleur dès

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #f5f5f5;
 }
 .dice{
-    background-color: rgb(217 217 217);
+    background-color: #fff8dc;
     border: 1px solid black;
     font-weight: 500;
     border-radius: 5px;
