--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ header{
     background-color: darkgoldenrod;
     
 }
+h1{
+    font-size: 2.8em;
+    position: absolute;
+    padding-left: 40px;
+    padding-top: 10px;
+}
 header h1{
     font-size: 2.6em;
     padding-top: 20px;
