--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ main{
     border: 1 px solid black;
     display: flex;
     justify-content: space-between;
-    margin: 80px 0 80px 0;
+    margin-top:20px
+    /* margin: 80px 0 80px 0; */
 }
 .playGround{
     display: flex;
@@ -93,7 +94,7 @@ aside{
     margin: 15px;
     cursor: pointer;
 }
-.btn:hover, .btn-2:hover{
+.btn:hover, .btn-2:hover, .btn-continuer:hover{
 transform: scale(1.02);
 }
 .resume{
@@ -109,11 +110,11 @@ transform: scale(1.02);
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 70%;
+    width: 65%;
     background-color: #efdc93;
 }
 .section2{
-    width: 30%;
+    width: 35%;
     background-color: darkgoldenrod;
 }
 .plateau{
@@ -172,4 +173,26 @@ aside th {
 }
 .section1 td:hover{
     transform: scale(1.01);
+}
+.tempsEcoule{
+    display: none;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    opacity: 0.9;
+    position: absolute;
+    background-color: #efdc93;
+}
+.btn-continuer{
+    background-color: cornsilk;
+    /* box-shadow: 0 0 5px black; */
+    border-radius: 5px;
+    font-size: 1.4em;
+    padding : 10px;
+    width: 150px;
+    text-align: center;
+    margin: 15px;
+    cursor: pointer;  
 }
