--- a/style.css
+++ b/style.css
@@ -12,21 +12,50 @@ body {
     border: 1px solid black;
     font-weight: 500;
     border-radius: 5px;
-    font-size: 60px;
-    width: 100px;
-    height: 100px;
-    padding-top: 12px;
+    font-size: 1.8em;
+    width: 2.2em;
+    height: 2.2em;
+    padding-top: 0.5em;
     text-align: center;
 }
-.container{
+@media screen and (min-width: 991px) {
+    .dice{
+        font-size: 60px;
+        width: 100px;
+        height: 100px;
+        padding: 12px 0 0 0;
+    }
+}
+/* .container{
     margin: 0 auto;
     width: 1200px;
+} */
+.container {
+    width: 100%;
+    margin:0 auto
 }
-header{
+@media screen and (min-width: 767px) {
+    .container {
+        width: 717px;
+        display: flex;
+        flex-direction: column;
+    }
+}
+@media screen and (min-width: 991px) {
+    .container {
+        width: 931px;
+    }
+}
+@media screen and (min-width: 1199px) {
+    .container {
+        width: 1139px;
+    }
+}
+/* header{
     height: 100px;
     background-color: darkgoldenrod;
     
-}
+} */
 h1{
     font-size: 2.8em;
     position: absolute;
@@ -39,14 +68,27 @@ header h1{
     margin: 0;
 }
 main{
-    border-radius: 30px;
-    overflow: hidden ;
     display: flex;
-    border: 1 px solid black;
-    display: flex;
-    justify-content: space-between;
-    margin-top:20px
-    /* margin: 80px 0 80px 0; */
+    flex-direction: column;
+}
+@media screen and (min-width: 767px) {
+    main{
+        border-radius: 30px;
+        overflow: hidden ;
+        display: flex;
+        flex-direction: row;
+        margin-top:40px
+    }
+}
+@media screen and (min-width: 991px) {
+    .container {
+        width: 931px;
+    }
+}
+@media screen and (min-width: 1199px) {
+    .container {
+        width: 1139px;
+    }
 }
 .playGround{
     display: flex;
@@ -108,14 +150,32 @@ transform: scale(1.02);
 }
 .section1{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    width: 65%;
+    width: 100%;
     background-color: #efdc93;
+    padding: 160px 0 80px 0;
+}
+@media screen and (min-width: 767px) {
+    .section1{
+        width: 65%;
+        padding: 160px 0 80px 0;
+    }
+}
+@media screen and (min-width: 1199px) {
+    .section1{
+        align-items: center;
+        padding:0;
+    }
 }
 .section2{
-    width: 35%;
+    width: 100%;
     background-color: darkgoldenrod;
+}
+@media screen and (min-width: 767px) {
+    .section2{
+        width: 35%;
+    }
 }
 .plateau{
     display: flex;
@@ -123,7 +183,12 @@ transform: scale(1.02);
 }
 .controlTimer{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+@media screen and (min-width: 767px) {
+    .controlTimer{
+        justify-content: space-between;
+    }
 }
 .gameControl{
     display: flex;
