le contenu de historic word passe par un tableau + implémentation d'une function de verif des mots invalides dans se tableau (pas connecté)

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ main{
     padding: 10px 40px;
     width: 100%;
     max-width: 100%;
+    height: 100px;
 }
 aside{
     border-left: 1 px solid black;
