affichage du resultat + correctif bdd -> version complétement fonctionnelle

--- a/style.css
+++ b/style.css
@@ -304,3 +304,10 @@ aside th {
     cursor: pointer;  
 }
 
+.motValid{
+    color: green;
+}
+.motInvalide{
+    color: red;
+    text-decoration: line-through;
+}
